--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date"
   ],
   "dependencies": {
+    "@nuintun/qrcode": "^2.1.1",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
